Change h1 color in all breakpoints + font size

--- a/scss/aboutme.css
+++ b/scss/aboutme.css
@@ -6,10 +6,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 32px;
+    font-size: 34px;
     font-family: 'Rokkitt', serif;
     margin-top: 150px;
-    color: linear-gradient(0.25turn, #146B7E, #2BD8FE);
+    background: -webkit-linear-gradient(0.25turn, #146B7E, #2BD8FE);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
   #about-me h1 img {
     display: none;
@@ -51,10 +53,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 32px;
+    font-size: 34px;
     font-family: 'Rokkitt', serif;
     margin-top: 150px;
-    color: linear-gradient(0.25turn, #146B7E, #2BD8FE);
+    background: -webkit-linear-gradient(0.25turn, #146B7E, #2BD8FE);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
   #about-me h1 img {
     display: none;
@@ -111,10 +115,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 37px;
+    font-size: 38px;
     font-family: 'Rokkitt', serif;
     margin-top: 160px;
-    color: linear-gradient(0.25turn, #146B7E, #2BD8FE);
+    background: -webkit-linear-gradient(0.25turn, #146B7E, #2BD8FE);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
   #about-me h1 img {
     display: none;
@@ -179,7 +185,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 39px;
+    font-size: 40px;
     font-family: 'Rokkitt', serif;
     margin-top: 250px;
     margin-bottom: 50px;
@@ -262,7 +268,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 39px;
+    font-size: 40px;
     font-family: 'Rokkitt', serif;
     margin-top: 300px;
     margin-bottom: 50px;
