--- a/scss/bannerTop.css
+++ b/scss/bannerTop.css
@@ -10,16 +10,28 @@
     font-size: 32px;
     font-family: 'Rokkitt', serif;
     margin-top: 80px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   #banner-top-info .author h2 {
     color: #000000;
     font-family: 'Rokkitt', serif;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-top: 10px;
     font-size: 26px;
   }
@@ -27,18 +39,31 @@
     color: #000000;
     font-family: 'Rokkitt', serif;
     font-size: 21px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-top: 10px;
     text-align: center;
   }
   #banner-top-info .button-area {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   #banner-top-info .button-area a {
+    background: -webkit-gradient(linear, left top, right top, from(#1D90A9), to(#75E6FF));
     background: linear-gradient(0.25turn, #1D90A9, #75E6FF);
     border: none;
     padding: 12px;
@@ -74,16 +99,28 @@
     font-size: 32px;
     font-family: 'Rokkitt', serif;
     margin-top: 120px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   #banner-top-info .author h2 {
     color: #000000;
     font-family: 'Rokkitt', serif;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-top: 10px;
     font-size: 26px;
   }
@@ -91,18 +128,31 @@
     color: #000000;
     font-family: 'Rokkitt', serif;
     font-size: 21px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-top: 10px;
     text-align: center;
   }
   #banner-top-info .button-area {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   #banner-top-info .button-area a {
+    background: -webkit-gradient(linear, left top, right top, from(#1D90A9), to(#75E6FF));
     background: linear-gradient(0.25turn, #1D90A9, #75E6FF);
     border: none;
     padding: 12px;
@@ -132,15 +182,22 @@
     overflow-x: hidden;
   }
   #banner-top-info .image img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: right;
-    align-items: right;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
+    -webkit-box-align: right;
+        -ms-flex-align: right;
+            align-items: right;
     width: 600px;
     height: auto;
     float: right;
     margin-right: -240px;
     margin-top: -35px;
-    transform: rotateX(730deg);
+    -webkit-transform: rotateX(730deg);
+            transform: rotateX(730deg);
   }
   #banner-top-info .author {
     position: absolute;
@@ -162,17 +219,29 @@
     font-family: 'Rokkitt', serif;
     margin-top: 80px;
     margin-left: 33px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
   }
   #banner-top-info .author h2 {
     color: #000000;
     font-family: 'Rokkitt', serif;
     margin-left: 33px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
     font-size: 32px;
   }
   #banner-top-info .author p {
@@ -181,18 +250,31 @@
     font-family: 'Rokkitt', serif;
     font-size: 24px;
     float: left;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
   }
   #banner-top-info .button-area {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
     margin-left: 33px;
     margin-top: -90px;
   }
   #banner-top-info .button-area a {
+    background: -webkit-gradient(linear, left top, right top, from(#1D90A9), to(#75E6FF));
     background: linear-gradient(0.25turn, #1D90A9, #75E6FF);
     border: none;
     padding: 12px;
@@ -212,15 +294,22 @@
     overflow-x: hidden;
   }
   #banner-top-info .image img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: right;
-    align-items: right;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
+    -webkit-box-align: right;
+        -ms-flex-align: right;
+            align-items: right;
     width: 600px;
     height: auto;
     float: right;
     margin-right: -240px;
     margin-top: -35px;
-    transform: rotateX(730deg);
+    -webkit-transform: rotateX(730deg);
+            transform: rotateX(730deg);
   }
   #banner-top-info .author {
     position: absolute;
@@ -242,17 +331,29 @@
     font-family: 'Rokkitt', serif;
     margin-top: 80px;
     margin-left: 33px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
   }
   #banner-top-info .author h2 {
     color: #000000;
     font-family: 'Rokkitt', serif;
     margin-left: 33px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
     font-size: 32px;
   }
   #banner-top-info .author p {
@@ -261,18 +362,31 @@
     font-family: 'Rokkitt', serif;
     font-size: 24px;
     float: left;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
   }
   #banner-top-info .button-area {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
     margin-left: 30px;
     margin-top: -100px;
   }
   #banner-top-info .button-area a {
+    background: -webkit-gradient(linear, left top, right top, from(#1D90A9), to(#75E6FF));
     background: linear-gradient(0.25turn, #1D90A9, #75E6FF);
     border: none;
     padding: 12px;
@@ -292,15 +406,22 @@
     overflow-x: hidden;
   }
   #banner-top-info .image img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: right;
-    align-items: right;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
+    -webkit-box-align: right;
+        -ms-flex-align: right;
+            align-items: right;
     width: 900px;
     height: 650px;
     float: right;
     margin-right: -100px;
     margin-top: -20px;
-    transform: rotateX(730deg);
+    -webkit-transform: rotateX(730deg);
+            transform: rotateX(730deg);
   }
   #banner-top-info .author {
     position: absolute;
@@ -322,17 +443,29 @@
     font-family: 'Rokkitt', serif;
     margin-top: 80px;
     margin-left: 33px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
   }
   #banner-top-info .author h2 {
     color: #000000;
     font-family: 'Rokkitt', serif;
     margin-left: 33px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
     font-size: 26px;
   }
   #banner-top-info .author p {
@@ -341,18 +474,31 @@
     font-family: 'Rokkitt', serif;
     font-size: 22px;
     float: left;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
   }
   #banner-top-info .button-area {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
     margin-left: 30px;
     margin-top: -270px;
   }
   #banner-top-info .button-area a {
+    background: -webkit-gradient(linear, left top, right top, from(#1D90A9), to(#75E6FF));
     background: linear-gradient(0.25turn, #1D90A9, #75E6FF);
     border: none;
     padding: 12px;
@@ -372,15 +518,22 @@
     overflow-x: hidden;
   }
   #banner-top-info .image img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: right;
-    align-items: right;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
+    -webkit-box-align: right;
+        -ms-flex-align: right;
+            align-items: right;
     width: 900px;
     height: auto;
     float: right;
     margin-right: -120px;
     margin-top: -35px;
-    transform: rotateX(730deg);
+    -webkit-transform: rotateX(730deg);
+            transform: rotateX(730deg);
   }
   #banner-top-info .author {
     position: absolute;
@@ -402,17 +555,29 @@
     font-family: 'Rokkitt', serif;
     margin-top: 80px;
     margin-left: 53px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
   }
   #banner-top-info .author h2 {
     color: #000000;
     font-family: 'Rokkitt', serif;
     margin-left: 53px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
     font-size: 28px;
     margin-top: 40px;
   }
@@ -422,18 +587,31 @@
     font-family: 'Rokkitt', serif;
     font-size: 20px;
     float: left;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
   }
   #banner-top-info .button-area {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: left;
-    align-items: left;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
     margin-left: 53px;
     margin-top: -350px;
   }
   #banner-top-info .button-area a {
+    background: -webkit-gradient(linear, left top, right top, from(#1D90A9), to(#75E6FF));
     background: linear-gradient(0.25turn, #1D90A9, #75E6FF);
     border: none;
     padding: 12px;
@@ -447,3 +625,4 @@
     display: none;
   }
 }
+/*# sourceMappingURL=bannerTop.css.map */
