--- a/scss/navMedia.css
+++ b/scss/navMedia.css
@@ -5,7 +5,9 @@
     margin-bottom: -36px;
   }
   header .hamburger {
-    justify-content: right;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
     float: right;
     margin-top: 2px;
   }
@@ -26,7 +28,9 @@
     margin-bottom: -36px;
   }
   header .hamburger {
-    justify-content: right;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
     float: right;
     margin-top: 3px;
   }
@@ -47,7 +51,9 @@
     margin-bottom: -66px;
   }
   header .hamburger {
-    justify-content: right;
+    -webkit-box-pack: right;
+        -ms-flex-pack: right;
+            justify-content: right;
     float: right;
     margin-top: 22px;
   }
@@ -66,10 +72,16 @@ header {
 }
 
 .nav-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   list-style: none;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .nav-links li {
@@ -102,9 +114,13 @@ header {
   margin-left: -10px;
   width: 100%;
   height: 100vh;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   clip-path: circle(100px at 90% -10%);
   -webkit-clip-path: circle(100px at 90% -10%);
+  -webkit-transition: all 1s ease-out;
   transition: all 1s ease-out;
   pointer-events: none;
 }
@@ -119,17 +135,21 @@ header {
 }
 
 .nav-links li:nth-child(1) {
+  -webkit-transition: all 0.6s ease 0.2s;
   transition: all 0.6s ease 0.2s;
 }
 
 .nav-links li:nth-child(2) {
+  -webkit-transition: all 0.6s ease 0.4s;
   transition: all 0.6s ease 0.4s;
 }
 
 .nav-links li:nth-child(3) {
+  -webkit-transition: all 0.6s ease 0.6s;
   transition: all 0.6s ease 0.6s;
 }
 
 .nav-links li.fade {
   opacity: 1;
 }
+/*# sourceMappingURL=navMedia.css.map */
