Change button size in portfolio, change margin-top

--- a/scss/portfolio.css
+++ b/scss/portfolio.css
@@ -153,7 +153,7 @@
   #portfolio .portfolio-text h2 {
     text-align: center;
     font-family: 'Rokkitt', serif;
-    margin-top: 80px;
+    margin-top: 130px;
     font-size: 27px;
   }
   #portfolio .portfolio-text h2 b {
@@ -244,7 +244,7 @@
   #portfolio .portfolio-text h2 {
     text-align: center;
     font-family: 'Rokkitt', serif;
-    margin-top: 130px;
+    margin-top: 190px;
     font-size: 27px;
   }
   #portfolio .portfolio-text h2 b {
@@ -335,7 +335,7 @@
   #portfolio .portfolio-text h2 {
     text-align: center;
     font-family: 'Rokkitt', serif;
-    margin-top: 140px;
+    margin-top: 200px;
     font-size: 27px;
   }
   #portfolio .portfolio-text h2 b {
@@ -382,8 +382,9 @@
             align-items: center;
     margin: 0 auto;
     padding: 10px;
-    width: 200px;
-    margin-top: 60px;
+    width: 260px;
+    margin-top: 70px;
+    font-size: 18px;
   }
   #portfolio .next_and_back_slide_show button.left-arrow {
     border: none;
@@ -426,7 +427,7 @@
   #portfolio .portfolio-text h2 {
     text-align: center;
     font-family: 'Rokkitt', serif;
-    margin-top: 140px;
+    margin-top: 200px;
     font-size: 27px;
   }
   #portfolio .portfolio-text h2 b {
@@ -473,7 +474,7 @@
             align-items: center;
     margin: 0 auto;
     padding: 10px;
-    width: 200px;
+    width: 260px;
     margin-top: 60px;
   }
   #portfolio .next_and_back_slide_show button.left-arrow {
@@ -517,7 +518,7 @@
   #portfolio .portfolio-text h2 {
     text-align: center;
     font-family: 'Rokkitt', serif;
-    margin-top: 140px;
+    margin-top: 200px;
     font-size: 27px;
   }
   #portfolio .portfolio-text h2 b {
