--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -140,7 +140,7 @@
             h2{
                 text-align: center;
                 font-family: 'Rokkitt', serif;
-                margin-top: 80px;
+                margin-top: 130px;
                 font-size: 27px;
                 
                 b{
@@ -224,7 +224,7 @@
             h2{
                 text-align: center;
                 font-family: 'Rokkitt', serif;
-                margin-top: 130px;
+                margin-top: 190px;
                 font-size: 27px;
                 
                 b{
@@ -309,7 +309,7 @@
             h2{
                 text-align: center;
                 font-family: 'Rokkitt', serif;
-                margin-top: 140px;
+                margin-top: 200px;
                 font-size: 27px;
                 
                 b{
@@ -346,8 +346,9 @@
                 align-items: center;
                 margin: 0 auto;
                 padding: 10px;
-                width: 200px;
-                margin-top: 60px;
+                width: 260px;
+                margin-top: 70px;
+                font-size: 18px;
             }
         }
         .next_and_back_slide_show{  
@@ -393,7 +394,7 @@
             h2{
                 text-align: center;
                 font-family: 'Rokkitt', serif;
-                margin-top: 140px;
+                margin-top: 200px;
                 font-size: 27px;
                 
                 b{
@@ -430,7 +431,7 @@
                 align-items: center;
                 margin: 0 auto;
                 padding: 10px;
-                width: 200px;
+                width: 260px;
                 margin-top: 60px;
             }
         }
@@ -477,7 +478,7 @@
             h2{
                 text-align: center;
                 font-family: 'Rokkitt', serif;
-                margin-top: 140px;
+                margin-top: 200px;
                 font-size: 27px;
                 
                 b{
