Repair problem with slider arrows. Change breakpoint

--- a/scss/portfolio.css
+++ b/scss/portfolio.css
@@ -1,23 +1,13 @@
-@media only screen and (max-width: 479px) {
+@media only screen and (min-width: 320px) and (max-width: 479px) {
   #portfolio .getproject button {
     border: none;
     border-radius: 25px;
-    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
     color: white;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 200px;
@@ -27,35 +17,29 @@
     border: none;
     background: transparent;
     float: left;
-    margin-top: 150px;
+    margin-top: 100px;
   }
   #portfolio .next_and_back_slide_show button.left-arrow img {
-    width: 44px;
-    height: 44px;
+    width: 38px;
+    height: 38px;
   }
   #portfolio .next_and_back_slide_show button.right-arrow {
     border: none;
     background: transparent;
     float: right;
-    margin-top: 150px;
+    margin-top: 100px;
   }
   #portfolio .next_and_back_slide_show button.right-arrow img {
-    width: 44px;
-    height: 44px;
+    width: 38px;
+    height: 38px;
   }
   #portfolio .portfolio-item img {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
-    width: 300px;
-    height: 210px;
+    width: 200px;
+    height: 150px;
     max-width: 100%;
     margin-top: 60px;
   }
@@ -71,15 +55,9 @@
     -webkit-text-fill-color: transparent;
   }
   #portfolio .portfolio-text img {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
     width: 172px;
     height: auto;
@@ -91,22 +69,12 @@
   #portfolio .getproject button {
     border: none;
     border-radius: 25px;
-    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
     color: white;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 200px;
@@ -117,7 +85,7 @@
     background: transparent;
     float: left;
     margin-top: 150px;
-    margin-left: 10%;
+    margin-left: 5%;
   }
   #portfolio .next_and_back_slide_show button.left-arrow img {
     width: 44px;
@@ -128,22 +96,16 @@
     background: transparent;
     float: right;
     margin-top: 150px;
-    margin-right: 10%;
+    margin-right: 5%;
   }
   #portfolio .next_and_back_slide_show button.right-arrow img {
     width: 44px;
     height: 44px;
   }
   #portfolio .portfolio-item img {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
     width: 300px;
     height: 210px;
@@ -162,15 +124,9 @@
     -webkit-text-fill-color: transparent;
   }
   #portfolio .portfolio-text img {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
     width: 172px;
     height: auto;
@@ -182,22 +138,12 @@
   #portfolio .getproject button {
     border: none;
     border-radius: 25px;
-    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
     color: white;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 200px;
@@ -226,15 +172,9 @@
     height: 44px;
   }
   #portfolio .portfolio-item img {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
     width: 300px;
     height: 210px;
@@ -253,15 +193,9 @@
     -webkit-text-fill-color: transparent;
   }
   #portfolio .portfolio-text img {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
     width: 172px;
     height: auto;
@@ -273,22 +207,12 @@
   #portfolio .getproject button {
     border: none;
     border-radius: 25px;
-    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
     color: white;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 200px;
@@ -317,15 +241,9 @@
     height: 44px;
   }
   #portfolio .portfolio-item img {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
     width: 350px;
     height: 240px;
@@ -344,15 +262,9 @@
     -webkit-text-fill-color: transparent;
   }
   #portfolio .portfolio-text img {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
     width: 172px;
     height: auto;
@@ -364,22 +276,12 @@
   #portfolio .getproject button {
     border: none;
     border-radius: 25px;
-    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
     color: white;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 260px;
@@ -409,15 +311,9 @@
     height: 44px;
   }
   #portfolio .portfolio-item img {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
     width: 350px;
     height: 240px;
@@ -436,15 +332,9 @@
     -webkit-text-fill-color: transparent;
   }
   #portfolio .portfolio-text img {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
     width: 172px;
     height: auto;
@@ -456,22 +346,12 @@
   #portfolio .getproject button {
     border: none;
     border-radius: 25px;
-    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
     color: white;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 260px;
@@ -500,15 +380,9 @@
     height: 44px;
   }
   #portfolio .portfolio-item img {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
     width: 350px;
     height: 240px;
@@ -527,19 +401,12 @@
     -webkit-text-fill-color: transparent;
   }
   #portfolio .portfolio-text img {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto;
     width: 172px;
     height: auto;
     margin-top: -10px;
   }
 }
-/*# sourceMappingURL=portfolio.css.map */
