--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 479px) {
+@media only screen and (min-width: 320px) and (max-width: 479px) {
     #portfolio{
         .getproject{
             button{
@@ -21,21 +21,21 @@
                 border: none;
                 background: transparent;
                 float: left;
-                margin-top: 150px;
+                margin-top: 100px;
                 img{
-                    width: 44px;
-                    height: 44px;
+                    width: 38px;
+                    height: 38px;
                 }
             }
             button.right-arrow{
                 border: none;
                 background: transparent;
                 float: right;
-                margin-top: 150px;
+                margin-top: 100px;
                 
                 img{
-                    width: 44px;
-                    height: 44px;
+                    width: 38px;
+                    height: 38px;
                 }
             }
         }
@@ -46,8 +46,8 @@
                 justify-content: center;
                 align-items: center;
                 margin: 0 auto;
-                width: 300px;
-                height: 210px;
+                width: 200px;
+                height: 150px;
                 max-width: 100%;
                 margin-top: 60px;
             }
@@ -103,7 +103,7 @@
                 background: transparent;
                 float: left;
                 margin-top: 150px;
-                margin-left: 10%;
+                margin-left: 5%;
                 
                 img{
                     width: 44px;
@@ -115,7 +115,7 @@
                 background: transparent;
                 float: right;
                 margin-top: 150px;
-                margin-right: 10%;
+                margin-right: 5%;
                 
                 img{
                     width: 44px;
