--- a/scss/base.css
+++ b/scss/base.css
@@ -1,4 +1,7 @@
 body {
   overflow-x: hidden !important;
+  width: 100%;
+  margin-left: 0;
+  margin-right: 0;
 }
 /*# sourceMappingURL=base.css.map */
