--- a/scss/base.css
+++ b/scss/base.css
@@ -3,5 +3,6 @@ body {
   width: 100%;
   margin-left: 0;
   margin-right: 0;
+  background-color: whitesmoke;
 }
 /*# sourceMappingURL=base.css.map */
