--- a/scss/offer.css
+++ b/scss/offer.css
@@ -284,7 +284,7 @@
             align-items: center;
   }
   #offer .box-item {
-    background-color: #f0f0f0;
+    background-color: #e7e7e7;
     border-radius: 25px;
     padding: 15px;
     margin-bottom: 50px;
