--- a/scss/offer.scss
+++ b/scss/offer.scss
@@ -110,12 +110,23 @@
             margin-top: 180px;
             font-size: 27px;
             
+            .element{
+                position: absolute;
+                background-color: rgb(26, 186, 235);
+                    width: 135px;
+                    height: 34px;
+                    margin-top: -46px;
+                    margin-left: 334px;
+                    z-index: -1;
+                    opacity: 0.8;
+            }
+            
             b{
              background: -webkit-linear-gradient(0.25turn,#146B7E,#2BD8FE);
              -webkit-background-clip: text;
              -webkit-text-fill-color: transparent;
             }
-         }
+        }
      }
     #offer{
         display: flex;
@@ -164,6 +175,17 @@
             font-family: 'Rokkitt', serif;
             margin-top: 200px;
             font-size: 27px;
+            
+            .element{
+                position: absolute;
+                background-color: rgb(26, 186, 235);
+                    width: 135px;
+                    height: 34px;
+                    margin-top: -46px;
+                    margin-left: 334px;
+                    z-index: -1;
+                    opacity: 0.8;
+            }
             
             b{
              background: -webkit-linear-gradient(0.25turn,#146B7E,#2BD8FE);
@@ -219,6 +241,17 @@
             margin-top: 200px;
             font-size: 28px;
             
+            .element{
+                position: absolute;
+                background-color: rgb(26, 186, 235);
+                    width: 115px;
+                    height: 34px;
+                    margin-top: -46px;
+                    margin-left: 354px;
+                    z-index: -1;
+                    opacity: 0.7;
+            }
+            
             b{
              background: -webkit-linear-gradient(0.25turn,#146B7E,#2BD8FE);
              -webkit-background-clip: text;
@@ -272,6 +305,17 @@
             font-family: 'Rokkitt', serif;
             margin-top: 200px;
             font-size: 28px;
+            
+            .element{
+                position: absolute;
+                background-color: rgb(26, 186, 235);
+                    width: 135px;
+                    height: 34px;
+                    margin-top: -46px;
+                    margin-left: 334px;
+                    z-index: -1;
+                    opacity: 0.8;
+            }
             
             b{
              background: -webkit-linear-gradient(0.25turn,#146B7E,#2BD8FE);
